[package]
name = "calendar-to-csv"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
chrono = "0.4.35"
csv = "1.3"
eframe = "0.26"
gcal = "0.1.6"
tokio = { version = "1.35", features = ["rt-multi-thread", "time"] }
